--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,13 @@
 <page-body>
-  <section>
+  <div class='row'>
     <h1>Version 6</h1>
+    <h2>6.0.0-beta10!</h2>
+    <h3>New</h3>
+    <ul>
+      <li>Added a customDateFormat plugin and new options to allow custom formats to be provided for input parsing/setting</li>
+      <li>Replaced examples page with REPL</li>
+      <li>Lots of doc clean up</li>
+    </ul>
     <h2>Beta9</h2>
     <h3>Bug Fixes</h3>
     <ul>
@@ -209,8 +216,8 @@
           href='https://github.com/Eonasdan/tempus-dominus/issues/2420'>#2420</a>
       </li>
     </ul>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>Version 6-alpha14</h2>
     <h3>New</h3>
     <ul>
@@ -234,8 +241,8 @@
       <li>Fixed widget positioning with rtl <a href='https://github.com/Eonasdan/tempus-dominus/issues/2400'>#2400</a>
       </li>
     </ul>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>Version 6-alpha1.0.13</h2>
     <h3>New</h3>
     <ul>
@@ -260,15 +267,15 @@
       <li>Fixed issue with time component grid. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2395'>#2395</a></li>
     </ul>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>Version 6-alpha1.0.4</h2>
     <h3>Bug fixes</h3>
     <ul>
       <li>Fixed issue with meridiem (AM/PM) button clicks.</li>
     </ul>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>Version 6-alpha1.0.3</h2>
     <h3>Bug fixes</h3>
     <ul>
@@ -279,8 +286,8 @@
       <li>Fixed setting the defaultDate option with a Date object. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2391'>#2391</a></li>
     </ul>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>Version 6-alpha1</h2>
     <h3 id='general'>General</h3>
     <ul>
@@ -399,9 +406,9 @@
       <li>changed plugin.name from <code>datetimepicker</code> to <code>tempus-dominus</code></li>
       <li>changed root data namespace from <code>datetimepicker</code> to <code>td</code></li>
     </ul>
-  </section>
+  </div>
 
-  <section>
+  <div class='row'>
     <h1>
       Version 5
     </h1>
@@ -409,16 +416,16 @@
       Version 5 was a rewrite of v4 taking some pending pull requests and fixes along with it. Unfortunately, I didn't
       do a very good job at documenting those changes.
     </p>
-  </section>
+  </div>
 
-  <section>
+  <div class='row'>
     <h1>
       Version 4
     </h1>
     <p>
-      The changlog from v2-v4 can be <a href='https://getdatepicker.com/4/ChangeLog/'>read here</a>.
+      The chang log from v2-v4 can be <a href='https://getdatepicker.com/4/ChangeLog/'>read here</a>.
     </p>
-  </section>
+  </div>
 
 </page-body>
 <page-meta>
