--- a/src/docs/partials/locale.html
+++ b/src/docs/partials/locale.html
@@ -1,54 +1,49 @@
 <page-body>
-  <section>
-    <h3>Introduction</h3>
+  <div class='row'>
     <p>
       The locale files offer a simple way to globally or individually set the localization options without the need to
       hand code that everytime.
     </p>
-  </section>
-  <section>
-    <div class='container'>
-      <div class='row'>
-        <div class='col-sm-6'>
-          <label for='datetimepicker1Input' class='form-label'>Simple picker</label>
-          <div
-            class='input-group'
-            id='datetimepicker1'
-            data-td-target-input='nearest'
-            data-td-target-toggle='nearest'
-          >
-            <input
-              id='datetimepicker1Input'
-              type='text'
-              class='form-control'
-              data-td-target='#datetimepicker1'
-            />
-            <span
-              class='input-group-text'
-              data-td-target='#datetimepicker1'
-              data-td-toggle='datetimepicker'
-            >
+  </div>
+
+  <div class='row'>
+    <div class='col-sm-6'>
+      <label for='datetimepicker1Input' class='form-label'>Simple picker</label>
+      <div
+        class='input-group'
+        id='datetimepicker1'
+        data-td-target-input='nearest'
+        data-td-target-toggle='nearest'
+      >
+        <input
+          id='datetimepicker1Input'
+          type='text'
+          class='form-control'
+          data-td-target='#datetimepicker1'
+        />
+        <span
+          class='input-group-text'
+          data-td-target='#datetimepicker1'
+          data-td-toggle='datetimepicker'
+        >
                <span class='fas fa-calendar'></span>
              </span>
-          </div>
-        </div>
       </div>
     </div>
-    <script src='/6/js/locales/ru.js'></script>
-    <script type='text/javascript'>
-      tempusDominus.loadLocale(tempusDominus.locales.ru);
-      tempusDominus.locale(tempusDominus.locales.ru.name);
-      const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'));
-    </script>
-  </section>
-  <section>
-    <h3>Creating plugins</h3>
+  </div>
+  <script src='/6/js/locales/ru.js'></script>
+  <script type='text/javascript'>
+    tempusDominus.loadLocale(tempusDominus.locales.ru);
+    tempusDominus.locale(tempusDominus.locales.ru.name);
+    const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'));
+  </script>
+  <div class='row'>
+    <h2 id='creating'>Creating Locales</h2>
     <p>
       There are a few examples in the source like this
     </p>
     <pre>
-      <code class='language-javascript'>
-const name = 'ru';
+<code class='language-javascript'>const name = 'ru';
 
 const localization = {
   today: 'Перейти сегодня',
@@ -57,24 +52,21 @@ const localization = {
   startOfTheWeek: 1
 };
 
-export { localization, name };
-      </code>
+export { localization, name };</code>
     </pre>
-  </section>
-  <section>
-    <h3>Using a locale</h3>
+  </div>
+
+  <div class='row'>
+    <h2 id='using'>Using a locale</h2>
     <p>Load the locale file.</p>
     <pre>
-      <code class='language-html'>
-&lt;script src=&quot;/path/to/locale.js&quot;&gt;&lt;/script&gt;
-      </code>
+<code class='language-html'>&lt;script src=&quot;/path/to/locale.js&quot;&gt;&lt;/script&gt;</code>
     </pre>
     <p>
-      You can then either set the global default or you can it indvidually.
+      You can then either set the global default or you can it individually.
     </p>
     <pre>
-      <code class='language-js'>
-//load the RU locale
+<code class='language-js'>//load the RU locale
 tempusDominus.loadLocale(tempusDominus.locales.ru);
 
 //globally
@@ -82,10 +74,19 @@ tempusDominus.locale(tempusDominus.locales.ru.name);//set the default options to
 
 //picker
 const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(&#39;datetimepicker1&#39;));
-datetimepicker1.locale(tempusDominus.locales.ru.name);
-      </code>
+datetimepicker1.locale(tempusDominus.locales.ru.name);</code>
     </pre>
-  </section>
+  </div>
+
+  <div id='subToc' class='d-none'>
+    <nav id='TableOfContents'>
+      <ul>
+        <li><a href='#content'>Overview</a></li>
+        <li><a href='#creating'>Creating</a></li>
+        <li><a href='#using'>Using</a></li>
+      </ul>
+    </nav>
+  </div>
 </page-body>
 
 <page-meta>
