--- a/src/docs/partials/namespace/index.html
+++ b/src/docs/partials/namespace/index.html
@@ -1,19 +1,15 @@
 <page-body>
-  <section>
+  <div class='row'>
     <p>
-      Tempus Dominus uses and exposes a Namespace class for consistancy and easy reference.
+      Tempus Dominus uses and exposes a Namespace class for consistency and easy reference.
     </p>
     <p>
       These values are provide via <code>tempusDominus.Namespace</code>
     </p>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>NAME</h2>
     <p>Returns <code>tempus-dominus</code>.</p>
-
-    <h2>version</h2>
-    <p>Returns the current version of the picker.</p>
-
     <h2>dataKey</h2>
     <p>Returns <code>td</code>. This is used as a suffix for events e.g. <code>change.td</code>.</p>
 
@@ -25,13 +21,13 @@
 
     <h2>errorMessages</h2>
     <p>A class with the pickers errors and error messages. <a href='errors.html'>See the full css page for more details.</a></p>
-  </section>
+  </div>
 </page-body>
 
 <page-meta>
   <title>Namespace</title>
   <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
+  <update-date>07/20/2022</update-date>
   <excerpt>
     Overview of the Namespace for Tempus Dominus.
   </excerpt>
