--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -1,145 +1,143 @@
 <main>
-    <div class="bd-masthead mb-3" id="content">
-        <div class="container px-4 px-md-3">
-            <div class="row align-items-lg-center">
-                <div class="col-8 mx-auto col-md-4 order-md-2 col-lg-5">
-
-                </div>
-                <div class="col-md-8 order-md-1 text-center text-md-start">
-                    <h1 class="mb-3">Powerful and robust date and time picker</h1>
-                    <p class="lead mb-4">
-                        Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides a wide array of options that allow developers to provide date and or time selections to users as simple pickers, date of birth selection, appointments and more.
-                    </p>
-
-                    <div class="d-flex flex-column flex-md-row">
-                        <a href="/6/" class="btn btn-lg btn-bd-primary mb-3 me-md-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Get started', 'Get started');">Get started</a>
-                        <a href="/6/installing.html" class="btn btn-lg btn-outline-secondary mb-3" onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 6');">Download</a>
-                    </div>
-                    <p class="text-muted mb-0">
-                        Currently <strong>v6.0.0-beta10</strong>
-                        <span class="px-1">&middot;</span>
-                        <a href="https://getdatepicker.com/5-4/" class="link-secondary">v5 docs</a>
-                    </p>
-                </div>
-            </div>
-            <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CK7DC5QN&placement=getdatepickercom" id="_carbonads_js"></script>
-
+  <div class='bd-masthead mb-3' id='content'>
+    <div class='container-xxl bd-gutter'>
+      <div class='col-md-8 mx-auto text-center'>
+        <h1 class='mb-3 fw-semibold'>Powerful and robust date and time picker</h1>
+        <p class='lead mb-4'>
+          Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides
+          a wide array of options that allow developers to provide date and or time selections to users as simple
+          pickers, date of birth selection, appointments and more.
+        </p>
+        <div class='d-flex flex-column flex-lg-row align-items-md-stretch justify-content-md-center gap-3 mb-4'>
+          <div class='d-flex flex-column flex-md-row'>
+            <a href='/6/' class='btn btn-lg btn-bd-primary mb-3 me-md-3'
+               onclick="ga('send', 'event', 'Jumbotron actions', 'Get started', 'Get started');">Get started</a>
+            <a href='/6/installing.html' class='btn btn-lg btn-outline-secondary mb-3'
+               onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 6');">Download</a>
+          </div>
         </div>
+        <p class='text-muted mb-0'>
+          Currently <strong>v6.0.0-beta10</strong>
+          <span class='px-1'>&middot;</span>
+          <a href='https://getdatepicker.com/5-4/' class='link-secondary'>v5 docs</a>
+        </p>
+        <script async type='text/javascript'
+                src='//cdn.carbonads.com/carbon.js?serve=CK7DC5QN&placement=getdatepickercom'
+                id='_carbonads_js'></script>
+
+      </div>
     </div>
+  </div>
 
-    <div class="container masthead-followup px-4 px-md-3">
-        <section class="row mb-5 pb-md-4 align-items-center">
-            <div class="col-md-5">
-                <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-success">
-                    <i class="fa-solid fa-parachute-box fa-2x" aria-hidden="true"></i>
-                </div>
-                <h2 class="display-5 fw-normal">Installation</h2>
-                <p class="lead fw-normal">
-                    Install Tempus Dominus via npm.
-                </p>
-                <a class="btn btn-lg btn-outline-primary mb-3" href="/6/installing.html">Read installation docs</a>
-            </div>
-            <div class="col-md-7 ps-md-5">
-                <div class="highlight"><pre tabindex="0"><code class="language-shellsession">npm install @eonasdan/tempus-dominus</code></pre></div>
-            </div>
-        </section>
-
-        <section class="row mb-5 pb-md-4 align-items-center">
-            <div class="col-md-5">
-                <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-primary">
-                    <i class="fa-solid fa-cloud fa-2x" aria-hidden="true"></i>
-                </div>
-                <h2 class="display-5 fw-normal">jsDelivr</h2>
-                <p class="lead fw-normal">
-                    We recommend you use a CDN like <a href="https://www.jsdelivr.com/">jsDelivr</a>.
-                </p>
-                <p>
-                    Popper is required and must be included before the main picker script.
-                </p>
-                <a class="btn btn-lg btn-outline-primary mb-3" href="/6/introduction.html">Explore the docs</a>
-            </div>
-            <div class="col-md-7 ps-md-5">
-<pre>
-    <code class='language-html'>
-&lt;!-- Popperjs --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js&quot; integrity=&quot;sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
+  <div class='container masthead-followup px-4 px-md-3'>
+    <div class='row g-3 g-md-5 mb-5 pb-5 justify-content-center'>
+      <div class='col-lg-6 py-lg-4 pe-lg-5'>
+        <i class='fa-solid fa-parachute-box fa-2x' aria-hidden='true'></i>
+        <h3 class='fw-semibold'>Installation</h3>
+        <p class='pe-lg-5'>
+          Install Tempus Dominus via npm.
+        </p>
+        <pre tabindex='0'><code class='language-shellsession'>npm install @eonasdan/tempus-dominus</code></pre>
+        <p>
+          <a href='/6/installing.html'>Read installation docs</a>
+        </p>
+      </div>
+      <div class='col-lg-6 py-lg-4 ps-lg-5 border-lg-start'>
+        <i class='fa-solid fa-cloud fa-2x' aria-hidden='true'></i>
+        <h3 class='fw-semibold'>JsDelivr</h3>
+        <p class='lead fw-normal'>
+          We recommend you use a CDN like <a href='https://www.jsdelivr.com/'>jsDelivr</a>.
+        </p>
+        <p>
+          Popper is required and must be included before the main picker script.
+        </p>
+        <a class='btn btn-lg btn-outline-primary mb-3' href='/6/introduction.html'>Explore the docs</a>
+        <pre>
+<code class='language-html'>&lt;!-- Popperjs --&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js&quot;
+  crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 &lt;!-- Tempus Dominus JavaScript --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1.0.4/dist/js/tempus-dominus.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/js/tempus-dominus.js&quot;
+  crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 
 &lt;!-- Tempus Dominus Styles --&gt;
-&lt;link href=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1.0.4/dist/css/tempus-dominus.css&quot; rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;
-    </code>
+&lt;link href=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@master/dist/css/tempus-dominus.css&quot;
+  rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;</code>
 </pre>
-            </div>
-        </section>
-
-        <section class="row mb-5 pb-md-4 align-items-center">
-            <div class="container">
-                <div class="row center-block">
-                    <h3>Get awesome Dashboard Templates</h3>
-                    <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
-                        partners.</p>
-                </div>
-                <div class="row center-block">
-                    <div class="col-12">
-                        <h4 class="row">Creative Tim</h4>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/material-dashboard-pro?partner=127205" target="_blank"
-                           class="affiliate-project" rel="noopener">
-                            Material Pro
-                            <img src="https://s3.amazonaws.com/creativetim_bucket/products/51/original/opt_mdp_thumbnail.jpg"
-                                 alt="Material Pro" class="img-fluid">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/material-dashboard-pro-angular2?partner=127205"
-                           target="_blank" class="affiliate-project" rel="noopener">
-                            Material Pro Angular
-                            <img src="https://s3.amazonaws.com/creativetim_bucket/products/55/original/opt_mdp_angular_thumbnail.jpg"
-                                 alt="Material Pro Angular" class="img-fluid">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/argon-dashboard-pro?partner=127205" target="_blank"
-                           class="affiliate-project" rel="noopener">
-                            Argon Pro
-                            <img src="https://s3.amazonaws.com/creativetim_bucket/products/137/original/argon-dashboard-pro.jpg?1637855868"
-                                 alt="Argon Pro" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-                <div class="row center-block">
-                    <div class="col-12">
-                        <h4 class="row">Flatlogic</h4>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://flatlogic.com/templates/light-blue-html5?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project" rel="noopener">
-                            Light Blue Html5
-                            <img src="https://flatlogic.com/assets/templates/lb_html_full-798d1587249f7f3d65c6f8d9a11b2489daa042b4d46c377fac0573575a663f31.webp"
-                                 alt="Light Blue Vue Admin" class="img-fluid">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://flatlogic.com/templates/sing-app-html5?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project" rel="noopener">
-                            Sing App Html5
-                            <img src="https://flatlogic.com/assets/templates/sing_html5_full-94fa15f9a342fdf7256976aef8ed5ade80ef396c754781cfa764e2cc4e9e0eea.webp"
-                                 alt=" Sing App Angular Node.js" class="img-fluid">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
-                        <a href="https://flatlogic.com/templates/one-bootstrap-template?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project" rel="noopener">
-                            Flatlogic One Bootstrap Template
-                            <img src="https://flatlogic.com/assets/templates/one_bootstrap_full-afead8dd8432ed7fd0a81ad3a75aadc06d008998570c0fd78e5bbe20740812f9.webp"
-                                 alt="Light Sing App Vue" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+      </div>
     </div>
+
+    <div class='row mb-5 pb-md-4 align-items-center'>
+      <div class='container'>
+        <div class='row center-block'>
+          <h3>Get awesome Dashboard Templates</h3>
+          <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
+            partners.</p>
+        </div>
+        <div class='row center-block'>
+          <div class='col-12'>
+            <h4 class='row'>Creative Tim</h4>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://www.creative-tim.com/product/material-dashboard-pro?partner=127205' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              Material Pro
+              <img src='https://s3.amazonaws.com/creativetim_bucket/products/51/original/opt_mdp_thumbnail.jpg'
+                   alt='Material Pro' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://www.creative-tim.com/product/material-dashboard-pro-angular2?partner=127205'
+               target='_blank' class='affiliate-project' rel='noopener'>
+              Material Pro Angular
+              <img src='https://s3.amazonaws.com/creativetim_bucket/products/55/original/opt_mdp_angular_thumbnail.jpg'
+                   alt='Material Pro Angular' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://www.creative-tim.com/product/argon-dashboard-pro?partner=127205' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              Argon Pro
+              <img
+                src='https://s3.amazonaws.com/creativetim_bucket/products/137/original/argon-dashboard-pro.jpg?1637855868'
+                alt='Argon Pro' class='img-fluid'>
+            </a>
+          </div>
+        </div>
+        <div class='row center-block'>
+          <div class='col-12'>
+            <h4 class='row'>Flatlogic</h4>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://flatlogic.com/templates/light-blue-html5?ref=dg1K3bfa8w' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              Light Blue Html5
+              <img
+                src='https://flatlogic.com/assets/templates/lb_html_full-798d1587249f7f3d65c6f8d9a11b2489daa042b4d46c377fac0573575a663f31.webp'
+                alt='Light Blue Vue Admin' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://flatlogic.com/templates/sing-app-html5?ref=dg1K3bfa8w' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              Sing App Html5
+              <img
+                src='https://flatlogic.com/assets/templates/sing_html5_full-94fa15f9a342fdf7256976aef8ed5ade80ef396c754781cfa764e2cc4e9e0eea.webp'
+                alt=' Sing App Angular Node.js' class='img-fluid'>
+            </a>
+          </div>
+          <div class='col-sm-12 col-md-3'>
+            <a href='https://flatlogic.com/templates/one-bootstrap-template?ref=dg1K3bfa8w' target='_blank'
+               class='affiliate-project' rel='noopener'>
+              Flatlogic One Bootstrap Template
+              <img
+                src='https://flatlogic.com/assets/templates/one_bootstrap_full-afead8dd8432ed7fd0a81ad3a75aadc06d008998570c0fd78e5bbe20740812f9.webp'
+                alt='Light Sing App Vue' class='img-fluid'>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </main>
