--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -81,7 +81,7 @@
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
         </li>
         <li class='nav-item col-6 col-md-auto'>
-          <a class='nav-link p-2' aria-current='true' href='/6/rep.html'
+          <a class='nav-link p-2' aria-current='true' href='/6/repl.html'
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">REPL</a>
         </li>
         <li class='nav-item col-6 col-md-auto'>
