--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -81,7 +81,7 @@
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
         </li>
         <li class='nav-item col-6 col-md-auto'>
-          <a class='nav-link p-2' aria-current='true' href='/6/rep.html'
+          <a class='nav-link p-2' aria-current='true' href='/6/repl.html'
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">REPL</a>
         </li>
         <li class='nav-item col-6 col-md-auto'>
@@ -207,15 +207,9 @@
     </div>
   </div>
 </footer>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/solid.min.js'
-        integrity='sha512-wabaor0DW08KSK5TQlRIyYOpDrAfJxl5J0FRzH0dNNhGJbeUpHaNj7up3Kr2Bwz/abLvVcJvDrJL+RLFcyGIkg=='
-        crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/brands.min.js'
-        integrity='sha512-oPuIMrT4JN6Cw359VQkuI0OPn1reFOKJm1YUOjXxgIzMmNMY7g4jenNcJdYcF3dt90WyNajzivr3vZFSzgqLow=='
-        crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/fontawesome.min.js'
-        integrity='sha512-PoFg70xtc+rAkD9xsjaZwIMkhkgbl1TkoaRrgucfsct7SVy9KvTj5LtECit+ZjQ3ts+7xWzgfHOGzdolfWEgrw=='
-        crossorigin='anonymous' referrerpolicy='no-referrer'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/solid.min.js" integrity="sha512-LKdDHe5ZhpmiH6Kd6crBCESKkS6ryNpGRoBjGeh5mM/BW3NRN4WH8pyd7lHgQTTHQm5nhu0M+UQclYQalQzJnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/brands.min.js" integrity="sha512-helwW+1jTcWdOarbAV4eDgcPQg/WEM20j9oo7HE5caJ8hZXdW0mgYGuxafhlf4j4gYAuOL8WsX1QTy6HUnpWKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/fontawesome.min.js" integrity="sha512-TXHaOs+47HgWwY4hUqqeD865VIBRoyQMjI27RmbQVeKb1pH1YTq0sbuHkiUzhVa5z0rRxG8UfzwDjIBYdPDM3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
