provide repl example

--- a/src/docs/partials/options/index.html
+++ b/src/docs/partials/options/index.html
@@ -193,6 +193,8 @@
     <h2 id='allowInputToggle'>allowInputToggle<a class='anchor-link' aria-label='Anchor' href='#allowInputToggle'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
+      <a href='/6/repl.html#code/N4IgVgzgwg9gdgMwJYHMDycA2BPEAuAFwCcBXAUwBpwJ8QBDTTGAdwEk4AHEggFRhRSYyeAATFyIKgAsCAW0y1JIGfIByMAmVoAeAMYwAJmQB8DJm07c+AodoD0+o8ZGsEY0pTFSyIjkl0A1mREIsxIjCIQUiwi8GJkAB4EAEYwCSIIMLokEAB0IAC+QA' title='View On REPL'><i class="fa-solid fa-microscope"></i></a>
+
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       If true, the picker will show on textbox focus.
     </p>
