--- a/src/scss/tempus-dominus.scss
+++ b/src/scss/tempus-dominus.scss
@@ -16,6 +16,8 @@
   list-style: none;
   padding: 4px;
   width: 19rem;
+  min-width: 200px;
+  position: absolute;
   border-radius: 4px;
   display: none;
   z-index: 9999;
