--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,23 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.4</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fix misspelling #2667</li>
+        <li>Fix issue with customFormatPlugin</li>
+      </ul>
+    </div>
+
+    <div class='row'>
+      <h2>6.2.3</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fix popper reference</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.1</h2>
       <h3>New</h3>
       <ul>
