--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,16 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.5</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Added Polish localization #2673
+        </li>
+        <li>Updated locales to include formats</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.4</h2>
       <h3>Bug fixes</h3>
       <ul>
