--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -9,6 +9,7 @@
         <li>Added Polish localization #2673
         </li>
         <li>Updated locales to include formats</li>
+        <li>Export (re-export?) Options interface</li>
       </ul>
     </div>
 
