--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -238,6 +238,21 @@
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CL5K7E80FB"></script>
+<script>
+  if (window.location.hostname === 'getdatepicker.com') {
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-CL5K7E80FB');
+  }
+</script>
 <link rel='stylesheet' href='/css/carbon.css' />
 </body>
 </html>
