--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -7,6 +7,7 @@
       <h3>Bug fixes</h3>
       <ul>
         <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
+        <li>Fixed view date syncing across options and not updating correctly #2611</li>
       </ul>
       <h3>New</h3>
       <ul>
