--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,19 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.6</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
+        <li>Fixed view date syncing across options and not updating correctly #2611</li>
+      </ul>
+      <h3>New</h3>
+      <ul>
+
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.5</h2>
       <h3>New</h3>
       <ul>
