--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -2,13 +2,14 @@
   <div id='change-log'>
     <h1>Version 6</h1>
 
-    <h2>6.2.7</h2>
-    <h3>Bug fixes</h3>
-    <ul>
-      <li>Fixed customDateFormat shows 'undefined' when you manually erase the date #2693</li>
-    </ul>
-    <h3>New</h3>
-    <ul>
+    <div class='row'>
+      <h2>6.2.7</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed customDateFormat shows 'undefined' when you manually erase the date #2693</li>
+      </ul>
+      <h3>New</h3>
+      <ul>
 
     </ul>
   </div>
