<h3>Bug fixes</h3>       <ul>         <li>Fixed calendar header not updating correctly #2685</li>         <li>Fixed clock components disappearing when using side by side #2684</li>       </ul>

--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -238,6 +238,17 @@
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CL5K7E80FB"></script>
+<script>
+  if (location.hostname === 'getdatepicker.com') {
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CL5K7E80FB');
+  }
+</script>
 <link rel='stylesheet' href='/css/carbon.css' />
 </body>
 </html>
