--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -9,6 +9,11 @@
         <li>Fixed calendar header not updating correctly #2685</li>
         <li>Fixed clock components disappearing when using side by side #2684</li>
         <li>Fixed customDateFormat shows 'undefined' when you manually erase the date #2693</li>
+        <li>Fixed docs #2706</li>
+      </ul>
+      <h3>New</h3>
+      <ul>
+        <li>Unit tests!</li>
       </ul>
     </div>
 
