--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -133,10 +133,10 @@
     <div class='dropdown ms-3'>
       <button class='btn btn-bd-light dropdown-toggle' id='bd-versions' data-bs-toggle='dropdown' aria-expanded='false'
               data-bs-display='static'>
-        <span class='d-none d-lg-inline'>Tempus Dominus</span> v6.0
+        <span class='d-none d-lg-inline'>Tempus Dominus</span> v6.2.7
       </button>
       <ul class='dropdown-menu dropdown-menu-end' aria-labelledby='bd-versions'>
-        <li><a class='dropdown-item current' aria-current='true' href='/docs/6/'>Latest (6.0.x)</a></li>
+        <li><a class='dropdown-item current' aria-current='true' href='/docs/6/'>Latest (6.2.7)</a></li>
         <li>
           <hr class='dropdown-divider'>
         </li>
@@ -181,7 +181,7 @@
                                             target='_blank' rel='license noopener'>MIT</a>, docs <a
             href='https://creativecommons.org/licenses/by/3.0/' target='_blank' rel='license noopener'>CC BY 3.0</a>.
           </li>
-          <li class='mb-2'>Currently v6.2.5</li>
+          <li class='mb-2'>Currently v6.2.7</li>
         </ul>
       </div>
       <div class='col-6 col-lg-2 offset-lg-1 mb-3'>
