--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,17 +3,28 @@
     <h1>Version 6</h1>
 
     <div class='row'>
-      <h2>6.2.6</h2>
+      <h2>6.2.7</h2>
       <h3>Bug fixes</h3>
       <ul>
-        <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
-        <li>Fixed view date syncing across options and not updating correctly #2611</li>
+        <li>Fixed customDateFormat shows 'undefined' when you manually erase the date #2693</li>
+        <li>Fixed calendar header not updating correctly #2685</li>
+        <li>Fixed clock components disappearing when using side by side #2684</li>
+        <li>Fixed some doc issues #2706</li>
       </ul>
       <h3>New</h3>
       <ul>
+        <li>Unit tests! #2711</li>
+    </ul>
+  </div>
 
-      </ul>
-    </div>
+  <div class='row'>
+    <h2>6.2.6</h2>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
+      <li>Fixed view date syncing across options and not updating correctly #2611</li>
+    </ul>
+  </div>
 
     <div class='row'>
       <h2>6.2.5</h2>
