--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -181,7 +181,7 @@
                                             target='_blank' rel='license noopener'>MIT</a>, docs <a
             href='https://creativecommons.org/licenses/by/3.0/' target='_blank' rel='license noopener'>CC BY 3.0</a>.
           </li>
-          <li class='mb-2'>Currently v6.2.6</li>
+          <li class='mb-2'>Currently v6.2.7</li>
         </ul>
       </div>
       <div class='col-6 col-lg-2 offset-lg-1 mb-3'>
@@ -237,6 +237,17 @@
     'floating-chat.donateButton.background-color': '#323842',
     'floating-chat.donateButton.text-color': '#fff'
   });
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CL5K7E80FB"></script>
+<script>
+  if (location.hostname === 'getdatepicker.com') {
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CL5K7E80FB');
+  }
 </script>
 <link rel='stylesheet' href='/css/carbon.css' />
 </body>
