--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,22 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.8</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed error when using clear button on time component #2720</li>
+        <li>Fixed issue with promptTimeOnDateChange option #2630</li>
+        <li>Fixed useTwentyfourHour hour-range is 01 - 24, should be 00 - 23 #2600</li>
+        <li>Moved back @popperjs/core to peerDependencies and made it optional #2672</li>
+      </ul>
+      <h3>New</h3>
+      <ul>
+        <li>Pre commit hooks. Linter and prettier are now run before each commit. #2715</li>
+        <li>Locales and plugins now have typings included. #2719</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.7</h2>
       <h3>Bug fixes</h3>
       <ul>
@@ -14,17 +30,19 @@
       <h3>New</h3>
       <ul>
         <li>Unit tests! #2711</li>
-    </ul>
-  </div>
+      </ul>
+    </div>
 
-  <div class='row'>
-    <h2>6.2.6</h2>
-    <h3>Bug fixes</h3>
-    <ul>
-      <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection #2658</li>
-      <li>Fixed view date syncing across options and not updating correctly #2611</li>
-    </ul>
-  </div>
+    <div class='row'>
+      <h2>6.2.6</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed disabled/enabled dates performance issue. This also should fix the next/previous month selection
+          #2658
+        </li>
+        <li>Fixed view date syncing across options and not updating correctly #2611</li>
+      </ul>
+    </div>
 
     <div class='row'>
       <h2>6.2.5</h2>
