--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,14 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.9</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed CustomDateFormat Plugin: Hours always undefined #2742</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.8</h2>
       <h3>Bug fixes</h3>
       <ul>
