--- a/src/docs/partials/plugins/customDateFormat.html
+++ b/src/docs/partials/plugins/customDateFormat.html
@@ -66,7 +66,7 @@
     </div>
     <script src='/6/js/plugins/customDateFormat.js'></script>
     <script type='text/javascript'>
-      tempusDominus.extend(window.tempusDominus.plugins.customDateFormat);
+      tempusDominus.extend(tempusDominus.plugins.customDateFormat);
       const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
         {
           localization: {
@@ -89,7 +89,7 @@
 
   <div class='row'>
     <pre>
-<code class='language-js'>tempusDominus.extend(window.tempusDominus.plugins.customDateFormat);
+<code class='language-js'>tempusDominus.extend(tempusDominus.plugins.customDateFormat);
 //or
 import customDateFormat from 'tempusDominus/plugins/customDateFormat'
 tempusDominus.extend(customDateFormat);
