--- a/src/scss/tempus-dominus.scss
+++ b/src/scss/tempus-dominus.scss
@@ -16,12 +16,15 @@
   list-style: none;
   padding: 4px;
   width: 19rem;
-  min-height: 360px;
   border-radius: 4px;
   display: none;
   z-index: 9999;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
+
+  & .date-container {
+    min-height: 315px;
+  }
 
   &.calendarWeeks {
     width: 21rem;
