* fixes #2746 * fixed #2600 - when using plugin * moved plugins and locales into the js folder to make TS happy

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,15 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.2.10</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Can't change time & meridiem #2746</li>
+        <li>Fixed regression with #2600</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.2.9</h2>
       <h3>Bug fixes</h3>
       <ul>
