--- a/src/scss/tempus-dominus.scss
+++ b/src/scss/tempus-dominus.scss
@@ -22,10 +22,6 @@
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
 
-  & .date-container {
-    min-height: 315px;
-  }
-
   &.calendarWeeks {
     width: 21rem;
 
@@ -59,6 +55,13 @@
 
   &.show {
     display: block;
+    &.date-container {
+      min-height: 315px;
+    }
+
+    &.time-container {
+      min-height: 217px;
+    }
   }
 
   .td-collapse {
